pass1/Binary_Search/374_Guess_Number_Higher_or_Lower_E_acpt/log
solution.cpp: In member function 'int Solution::guessNumber(int)':
solution.cpp:40:24: error: expected primary-expression before ')' token
             } else if () {
                        ^
